# checkerz

./: .travis.yml  TAGS  checkerz.cabal  stack-ghc710.yaml  stack-ghc800.yaml  stack-ghc802.yaml  stack.yaml
app/: Main.hs
src/: GHCCompat.hs
src/Type/: Checkerz.hs
src/Type/Checkerz/: AST.hs  Lookup.hs
src/Type/Checkerz/Parser/: Predicate.hs
