name:                checkerz
version:             0.1.0.0
synopsis:            High-level compatibility layer for GHC's Type Checker Plugin
description:         This package provides a high-level compatibility layer to
                     write a
                     <https://ghc.haskell.org/trac/ghc/wiki/Plugins/TypeChecker type-checker plugin>
                     which works with multiple versions of GHC.
                     
homepage:            https://github.com/konn/checkerz#readme
license:             BSD3
license-file:        LICENSE
author:              Hiromi ISHII
maintainer:          konn.jinro _at_ gmail.com
copyright:           2015 (c) Hiromi ISHII
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.1

library
  hs-source-dirs:      src
  exposed-modules:     Type.Checkerz
                       Type.Checkerz.Lookup
                       Type.Checkerz.AST
  other-modules:       GHCCompat
  build-depends:       base                >= 4    && < 5
                     , ghc-tcplugins-extra >= 0.2  && < 0.3
                     , ghc                 >= 7.10 && < 8.3
                     , transformers        >= 0.4
                     , mtl                 >= 2.2
                     , containers
  ghc-options:         -Wall -O2
  default-language:    Haskell2010

executable checkerz-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2 -threaded
  build-depends:       base
                     , checkerz
  default-language:    Haskell2010

test-suite checkerz-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , checkerz
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/konn/checkerz
